--- a/microservice-pedidos/pom.xml
+++ b/microservice-pedidos/pom.xml
@@ -39,6 +39,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <excludes>
                         <exclude>
@@ -46,6 +53,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <mainClass>com.exemplo.pedidos.PedidosApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
