--- a/microservice-processador-pedidos/pom.xml
+++ b/microservice-processador-pedidos/pom.xml
@@ -43,6 +43,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <excludes>
                         <exclude>
@@ -50,6 +57,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <mainClass>com.exemplo.processador.ProcessadorPedidosApplication</mainClass>
                 </configuration>
             </plugin>
         </plugins>
